# RD_HW_7

./: README.md  asgi_app.py  fastapi_app.py  pyproject.toml  starlette_app.py  wsgi_app.py
